--- a/src/assets/scss/utilities/sizing/_square.scss
+++ b/src/assets/scss/utilities/sizing/_square.scss
@@ -7,4 +7,13 @@
       height: #{$value}rem;
     }
   }
+
+  &-96 {
+    width: 24rem;
+    height: 24rem;
+  }
+  &-128 {
+    width: 32rem;
+    height: 32rem;
+  }
 }
