--- a/src/assets/scss/utilities/sizing/_height.scss
+++ b/src/assets/scss/utilities/sizing/_height.scss
@@ -19,6 +19,13 @@
     }
   }
 
+  &-96 {
+    height: 24rem;
+  }
+  &-128 {
+    height: 32rem;
+  }
+
   @for $b from 2 through 6 {
     @for $a from 1 through $b - 1 {
       $height: math.div($a, $b) * 100;
@@ -38,6 +45,13 @@
       min-height: #{$height}rem;
     }
   }
+
+  &-96 {
+    min-height: 24rem;
+  }
+  &-128 {
+    min-height: 32rem;
+  }
 }
 .max-h {
   @for $idx from 0 through 64 {
@@ -46,5 +60,12 @@
     &-#{$idx} {
       max-height: #{$height}rem;
     }
+  }
+
+  &-96 {
+    max-height: 24rem;
+  }
+  &-128 {
+    max-height: 32rem;
   }
 }
