--- a/src/assets/scss/utilities/misc/_cursor.scss
+++ b/src/assets/scss/utilities/misc/_cursor.scss
@@ -1,11 +1,7 @@
 .cursor {
-  &-auto {
-    cursor: auto;
-  }
-  &-default {
-    cursor: default;
-  }
-  &-pointer {
-    cursor: pointer;
+  @each $pointer in auto, default, pointer, wait, text, move, not-allowed, progress, grab, grabbing {
+    &-#{$pointer} {
+      cursor: $pointer;
+    }
   }
 }
