--- a/src/assets/scss/utilities/colors/index.scss
+++ b/src/assets/scss/utilities/colors/index.scss
@@ -1,5 +1,5 @@
-@import "./background";
-@import "./border";
-@import "./outline";
-@import "./svg";
-@import "./text";
+@use "./background";
+@use "./border";
+@use "./outline";
+@use "./svg";
+@use "./text";
