--- a/src/assets/scss/utilities/flex/_order.scss
+++ b/src/assets/scss/utilities/flex/_order.scss
@@ -1,4 +1,4 @@
-@import "../breakpoints";
+@use "../breakpoints" as b;
 
 .order {
   &-first {
@@ -15,8 +15,8 @@
   }
 }
 
-@each $key, $value in $breakpoints {
-  @include media-min-width($value) {
+@each $key, $value in b.$breakpoints {
+  @include b.media-min-width($value) {
     .#{$key}\:order {
       &-first {
         order: -9999;
