--- a/src/assets/scss/utilities/flex/index.scss
+++ b/src/assets/scss/utilities/flex/index.scss
@@ -1,7 +1,7 @@
-@import "./align-items";
-@import "./align-self";
-@import "./direction";
-@import "./grow-shrink";
-@import "./justify-content";
-@import "./order";
-@import "./wrap";
+@use "./align-items";
+@use "./align-self";
+@use "./direction";
+@use "./grow-shrink";
+@use "./justify-content";
+@use "./order";
+@use "./wrap";
