--- a/src/assets/scss/utilities/fonts/index.scss
+++ b/src/assets/scss/utilities/fonts/index.scss
@@ -1,12 +1,12 @@
-@import "./family";
-@import "./letter-spacing";
-@import "./line-clamp";
-@import "./line-height";
-@import "./size";
-@import "./style";
-@import "./text-align";
-@import "./text-decoration";
-@import "./text-overflow";
-@import "./text-transform";
-@import "./weight";
-@import "./whitespace";
+@use "./family";
+@use "./letter-spacing";
+@use "./line-clamp";
+@use "./line-height";
+@use "./size";
+@use "./style";
+@use "./text-align";
+@use "./text-decoration";
+@use "./text-overflow";
+@use "./text-transform";
+@use "./weight";
+@use "./whitespace";
