--- a/src/assets/scss/utilities/grid/index.scss
+++ b/src/assets/scss/utilities/grid/index.scss
@@ -1,5 +1,5 @@
-@import "./auto-flow";
-@import "./column-span";
-@import "./row-span";
-@import "./template-columns";
-@import "./template-rows";
+@use "./auto-flow";
+@use "./column-span";
+@use "./row-span";
+@use "./template-columns";
+@use "./template-rows";
