--- a/src/assets/scss/utilities/index.scss
+++ b/src/assets/scss/utilities/index.scss
@@ -1,11 +1,11 @@
-@import "./borders";
-@import "./colors";
-@import "./flex";
-@import "./fonts";
-@import "./grid";
-@import "./layout";
-@import "./misc";
-@import "./sizing";
-@import "./spacing";
-@import "./transforms";
-@import "./transitions";
+@use "./borders";
+@use "./colors";
+@use "./flex";
+@use "./fonts";
+@use "./grid";
+@use "./layout";
+@use "./misc";
+@use "./sizing";
+@use "./spacing";
+@use "./transforms";
+@use "./transitions";
