--- a/src/assets/scss/utilities/layout/index.scss
+++ b/src/assets/scss/utilities/layout/index.scss
@@ -1,8 +1,8 @@
-@import "./box-sizing";
-@import "./display";
-@import "./object-fit";
-@import "./overflow";
-@import "./position";
-@import "./top-right-bottom-left";
-@import "./visibility";
-@import "./z-index";
+@use "./box-sizing";
+@use "./display";
+@use "./object-fit";
+@use "./overflow";
+@use "./position";
+@use "./top-right-bottom-left";
+@use "./visibility";
+@use "./z-index";
