--- a/src/assets/scss/utilities/misc/_opacity.scss
+++ b/src/assets/scss/utilities/misc/_opacity.scss
@@ -1,6 +1,6 @@
-@import "../pseudo-classes";
+@use "../pseudo-classes" as pc;
 
-@include pseudo-classes-wrapper(opacity) {
+@include pc.pseudo-classes-wrapper(opacity) {
   @for $idx from 0 through 20 {
     $key: $idx * 5;
     $value: $idx * 0.05;
