--- a/src/assets/scss/utilities/misc/index.scss
+++ b/src/assets/scss/utilities/misc/index.scss
@@ -1,4 +1,4 @@
-@import "./appearance";
-@import "./box-shadow";
-@import "./cursor";
-@import "./opacity";
+@use "./appearance";
+@use "./box-shadow";
+@use "./cursor";
+@use "./opacity";
