--- a/src/assets/scss/utilities/transforms/_rotate.scss
+++ b/src/assets/scss/utilities/transforms/_rotate.scss
@@ -1,4 +1,4 @@
-@import "../breakpoints";
+@use "../breakpoints" as b;
 
 @mixin rotate-deg {
   @for $idx from 0 through 12 {
@@ -14,8 +14,8 @@
   @include rotate-deg;
 }
 
-@each $key, $value in $breakpoints {
-  @include media-min-width($value) {
+@each $key, $value in b.$breakpoints {
+  @include b.media-min-width($value) {
     .#{$key}\:rotate {
       @include rotate-deg;
     }
