--- a/src/assets/scss/utilities/transforms/index.scss
+++ b/src/assets/scss/utilities/transforms/index.scss
@@ -1,4 +1,4 @@
-@import "./rotate";
-@import "./scale";
-@import "./skew";
-@import "./translate";
+@use "./rotate";
+@use "./scale";
+@use "./skew";
+@use "./translate";
