--- a/src/assets/scss/utilities/borders/index.scss
+++ b/src/assets/scss/utilities/borders/index.scss
@@ -1,6 +1,6 @@
-@import "./outline-offset";
-@import "./outline-style";
-@import "./outline-width";
-@import "./radius";
-@import "./style";
-@import "./width";
+@use "./outline-offset";
+@use "./outline-style";
+@use "./outline-width";
+@use "./radius";
+@use "./style";
+@use "./width";
