--- a/src/assets/scss/utilities/colors/_text.scss
+++ b/src/assets/scss/utilities/colors/_text.scss
@@ -1,6 +1,6 @@
-@import "./vars";
+@use "./vars" as v;
 
-@each $tint, $color in $colors {
+@each $tint, $color in v.$colors {
   .text-#{$tint} {
     color: $color;
   }
