--- a/src/assets/scss/utilities/flex/_align-self.scss
+++ b/src/assets/scss/utilities/flex/_align-self.scss
@@ -1,4 +1,4 @@
-@import "../breakpoints";
+@use "../breakpoints" as b;
 
 .self {
   &-start {
@@ -12,8 +12,8 @@
   }
 }
 
-@each $key, $value in $breakpoints {
-  @include media-min-width($value) {
+@each $key, $value in b.$breakpoints {
+  @include b.media-min-width($value) {
     .#{$key}\:self {
       &-start {
         align-self: flex-start;
