--- a/src/assets/scss/utilities/flex/_justify-content.scss
+++ b/src/assets/scss/utilities/flex/_justify-content.scss
@@ -1,4 +1,4 @@
-@import "../breakpoints";
+@use "../breakpoints" as b;
 
 .justify {
   &-start {
@@ -18,8 +18,8 @@
   }
 }
 
-@each $key, $value in $breakpoints {
-  @include media-min-width($value) {
+@each $key, $value in b.$breakpoints {
+  @include b.media-min-width($value) {
     .#{$key}\:justify {
       &-start {
         justify-content: flex-start;
