--- a/src/assets/scss/utilities/sizing/_height.scss
+++ b/src/assets/scss/utilities/sizing/_height.scss
@@ -1,5 +1,5 @@
 @use "sass:math";
-@import "../breakpoints";
+@use "../breakpoints" as b;
 
 @mixin each-height {
   &-auto {
@@ -75,8 +75,8 @@
   }
 }
 
-@each $key, $value in $breakpoints {
-  @include media-min-width($value) {
+@each $key, $value in b.$breakpoints {
+  @include b.media-min-width($value) {
     .#{$key}\:h {
       @include each-height;
     }
