--- a/src/assets/scss/utilities/sizing/_square.scss
+++ b/src/assets/scss/utilities/sizing/_square.scss
@@ -1,4 +1,4 @@
-@import "../breakpoints";
+@use "../breakpoints" as b;
 
 .sqrt {
   @for $idx from 0 through 64 {
@@ -20,8 +20,8 @@
   }
 }
 
-@each $key, $value in $breakpoints {
-  @include media-min-width($value) {
+@each $key, $value in b.$breakpoints {
+  @include b.media-min-width($value) {
     .#{$key}\:sqrt {
       @for $idx from 0 through 64 {
         $value: $idx * 0.25;
