--- a/src/assets/scss/utilities/spacing/_grid-gap.scss
+++ b/src/assets/scss/utilities/spacing/_grid-gap.scss
@@ -1,4 +1,4 @@
-@import "../breakpoints";
+@use "../breakpoints" as b;
 
 @mixin grid-gap {
   @for $idx from 0 through 16 {
@@ -20,8 +20,8 @@
   @include grid-gap;
 }
 
-@each $key, $value in $breakpoints {
-  @include media-min-width($value) {
+@each $key, $value in b.$breakpoints {
+  @include b.media-min-width($value) {
     .#{$key}\:gap {
       @include grid-gap;
     }
