--- a/src/assets/scss/utilities/spacing/_margin.scss
+++ b/src/assets/scss/utilities/spacing/_margin.scss
@@ -1,4 +1,4 @@
-@import "../breakpoints";
+@use "../breakpoints" as b;
 
 @mixin each-margin {
   &-auto {
@@ -66,8 +66,8 @@
   @include each-margin;
 }
 
-@each $key, $value in $breakpoints {
-  @include media-min-width($value) {
+@each $key, $value in b.$breakpoints {
+  @include b.media-min-width($value) {
     .#{$key}\:m {
       @include each-margin;
     }
