--- a/src/assets/scss/utilities/spacing/_padding.scss
+++ b/src/assets/scss/utilities/spacing/_padding.scss
@@ -1,4 +1,4 @@
-@import "../breakpoints";
+@use "../breakpoints" as b;
 
 @mixin each-padding {
   @for $idx from 0 through 16 {
@@ -38,8 +38,8 @@
   @include each-padding;
 }
 
-@each $key, $value in $breakpoints {
-  @include media-min-width($value) {
+@each $key, $value in b.$breakpoints {
+  @include b.media-min-width($value) {
     .#{$key}\:p {
       @include each-padding;
     }
